infrastructure/istio/platform-apps-waypoint.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: platform-apps-waypoint
  namespace: platform-apps
  labels:
    istio.io/waypoint-for: service
spec:
  infrastructure:
    parametersRef:
      group: ""
      kind: ConfigMap
      name: platform-apps-waypoint-options
  gatewayClassName: istio-waypoint
  listeners:
    - name: mesh
      port: 15008
      protocol: HBONE
